# raw_camera_recorder

./: CMakeLists.txt  README.md  package.xml
cfg/: params.yaml
include/raw_camera_recorder/: raw_camera_recorder.hpp
launch/: raw_6cameras.launch.py
scripts/: mkv_to_rosbag.py  play_synced.py
src/: raw_camera_recorder.cpp  raw_camera_recorder_main.cpp
