<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

    <name>raw_camera_recorder</name>
    <version>0.1.0</version>
    <description>
        Raw camera recorder with per-frame ROS2 timestamps for Jetson Orin.
        Records raw UYVY/I420 video to MKV via GStreamer splitmuxsink and
        writes per-frame ROS2 timestamps to CSV for offline rosbag conversion.
    </description>

    <maintainer email="todo@todo.com">TODO</maintainer>
    <license>BSD</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>libgstreamer1.0-dev</depend>
    <depend>libgstreamer-plugins-base1.0-dev</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
